# mia

./: .gitattributes  CMakeLists.txt  README.md  bpp.sh  mia.xpm
cmake_modules/: FindGCMS.cmake  FindGSL.cmake  FindGraphViz.cmake  FindInChi.cmake  FindLabId.cmake  FindMD.cmake  FindNetCDF.cmake  FindPQ.cmake  FindQWT.cmake
deb/: changelog  copyright  mia-gui.1  mia.desktop
doc/: doc.kilepr  mia-doc.bib  mia-doc.tex
docs/: index.html
docs/download/: mia_1.0.0-201604021659.deb  mia_1.0.0-9-g7e49_amd64.deb  sampledata.tgz
docs/download/archive/: mia_0.1.1-201511201400.tgz  mia_0.1.1-201511231415.deb  mia_1.0.0-201611232143.deb  mia_1.0.0-201701161906.deb
gui/: CMakeLists.txt  configdialog.cpp  configdialog.h  experimentlistwidget.cpp  experimentlistwidget.h  experimentwizard.cpp  experimentwizard.h  graphvizmia.h  graphvizqt.cpp  graphvizqt.h  gui-resources.qrc  hdfwriter.cpp  hdfwriter.h  labelidentificatorqthread.cpp  labelidentificatorqthread.h  main.cpp  miaguiconstants.h  miamainwindow.cpp  miamainwindow.h  midplot.cpp  midplot.h  mitrendplot.cpp  mitrendplot.h  multiexperiments.cpp  multiexperiments.h  netcdfimportdialog.cpp  netcdfimportdialog.h  nodecompounddescriptionwidget.cpp  nodecompounddescriptionwidget.h  nodecompoundtreemodel.cpp  nodecompoundtreemodel.h  nodewidget.cpp  nodewidget.h  nwview.cpp  nwview.h
gui/icons/: document-open-xml.xcf  document-save-tsv.xcf
gui/win32/: mia.rc
src/: CMakeLists.txt  compounddetector.cpp  compounddetector.h  config.h  labelingdataset.cpp  labelingdataset.h  labelingnetworkset.cpp  labelingnetworkset.h  miaexception.cpp  miaexception.h  middistancecalculator.cpp  middistancecalculator.h  misc.cpp  misc.h  networklayer.cpp  networklayer.h  nodecompound.cpp  nodecompound.h  serializationqt.cpp  serializationqt.h  settings.cpp  settings.h  utilities.cpp  utilities.h
